--- a/Transformer-from-Scratch/transformer_implementation_from_scratch.ipynb
+++ b/Transformer-from-Scratch/transformer_implementation_from_scratch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,52 +265,311 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MultiHeadAttentionBlock(nn.Module):\n",
+    "    def __init__(self, d_model: int, h: int, dropout:float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.h = h\n",
+    "\n",
+    "        assert d_model % h == 0, 'd_model is not divisible by h'\n",
+    "\n",
+    "        self.d_k = d_model // h\n",
+    "\n",
+    "        self.w_q = nn.Linear(d_model, d_model)\n",
+    "        self.w_k = nn.Linear(d_model, d_model)\n",
+    "        self.w_v = nn.Linear(d_model, d_model)\n",
+    "        self.w_o = nn.Linear(d_model, d_model)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def attention(query, key, value, mask, dropout: nn.Dropout):\n",
+    "        d_k = query.shape[-1]\n",
+    "        attention_scores = (query @ key.transpose(-2,-1)) / math.sqrt(d_k)\n",
+    "        if mask is not None:\n",
+    "            attention_scores.masked_fill_(mask == 0, -1e9)\n",
+    "        attention_scores = attention_scores.softmax(dim = -1)\n",
+    "        if dropout is not None:\n",
+    "            attention_scores = dropout(attention_scores)\n",
+    "\n",
+    "        return (attention_scores @ value), attention_scores\n",
+    "    \n",
+    "    def forward(self, q, k, v, mask):\n",
+    "        query = self.w_q(q)\n",
+    "        key = self.w_k(k)\n",
+    "        value = self.w_v(v)\n",
+    "\n",
+    "        query = query.view(query.shape[0], query.shape[1], self.h, self.d_k).transpose(1, 2)\n",
+    "        key = key.view(key.shape[0], key.shape[1], self.h, self.d_k).transpose(1,2)\n",
+    "        value = value.view(value.shape[0], value.shape[1], self.h, self.d_k).transpose(1,2)\n",
+    "\n",
+    "        x, self.attention_scores = MultiHeadAttentionBlock.attention(query, key, value, mask, self.dropout)\n",
+    "\n",
+    "        x = x.tanspose(1, 2).contiguous().view(x.shape[0], -1, self.h * self.d_k)\n",
+    "\n",
+    "        return self.w_o(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Residual Connection"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ResidualConnection(nn.Module):\n",
+    "    def __init__(self, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, sublayer):\n",
+    "        return x + self.dropout(sublayer(self.norm(x)))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoder"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "\n",
+    "    def __init__(self, self_attention_block: MultiHeadAttentionBlock, feed_forward_block: FeedForwardBlock, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block\n",
+    "        self.residual_connection = nn.ModuleList([ResidualConnection(dropout) for _ in range(2)])\n",
+    "\n",
+    "\n",
+    "    def forward(self, x, src_mask):\n",
+    "        x = self.residual_connection[0](x, lambda x: self.self_attention_block(x, x, x, src_mask))\n",
+    "        x = self.residual_connection[1](x, self.feed_forward_block)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoders\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "\n",
+    "    def __init__(self, layers:nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.layers = layers\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, mask)\n",
+    "        return self.norm(x)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoder"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class DecoderBlock(nn.Module):\n",
+    "\n",
+    "    def __init__(self, self_attention_block: MultiHeadAttentionBlock, cross_attention_block: MultiHeadAttentionBlock, feed_forward_block: FeedForwardBlock, dropout: float) -> None:\n",
+    "        super().__init__()\n",
+    "        self.self_attention_block = self_attention_block\n",
+    "        self.cross_attention_block = cross_attention_block\n",
+    "        self.feed_forward_block = feed_forward_block\n",
+    "        self.residual_connections = nn.ModuleList([ResidualConnection(dropout) for _ in range(3)])\n",
+    "\n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, tgt_mask))\n",
+    "        x = self.residual_connections[1](x, lambda x : self.cross_attention_block(x, encoder_output, encoder_output, src_mask))\n",
+    "        x = self.residual_connections[2](x, self.feed_forward_block)\n",
+    "\n",
+    "        return x"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "\n",
+    "    def __init__(self, layers: nn.ModuleList) -> None:\n",
+    "        super().__init__()\n",
+    "        self.layers = layers\n",
+    "        self.norm = LayerNormalization()\n",
+    "\n",
+    "    def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, encoder_output, src_mask, tgt_mask)\n",
+    "        return self.norm(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projection Layer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ProjectionLayer(nn.Module):\n",
+    "    def __init__(self, d_model: int, vocab_size: int) -> None:\n",
+    "        super().__init__()\n",
+    "        self.proj = nn.Linear(d_model, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.log_softmax(self.proj(x), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building the transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transformer(nn.Module):\n",
+    "\n",
+    "    def __init__(self, encoder: Encoder, \n",
+    "                 decoder: Decoder, \n",
+    "                 src_embed: InputEmbeddings, \n",
+    "                 tgt_embed: InputEmbeddings,\n",
+    "                 src_pos: PositionalEncoding,\n",
+    "                 tgt_pos: PositionalEncoding,\n",
+    "                 projection_layer: ProjectionLayer) -> None:\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.src_embed = src_embed\n",
+    "        self.tgt_embed = tgt_embed\n",
+    "        self.src_pos = src_pos\n",
+    "        self.tgt_pos = tgt_pos\n",
+    "        self.projection_layer = projection_layer\n",
+    "\n",
+    "    def encoder(self, src, src_mask):\n",
+    "        src = self.src_embed(src)\n",
+    "        src = self.src_pos(src)\n",
+    "        return self.encoder(src, src_mask)\n",
+    "    \n",
+    "    def decoder(self, encoder_output, src_mask, tgt, tgt_mask):\n",
+    "        tgt = self.tgt_embed(tgt)\n",
+    "        tgt = self.tgt_pos(tgt)\n",
+    "\n",
+    "        return self.decoder(tgt, encoder_output, src_mask, tgt_mask)\n",
+    "    \n",
+    "    def project(self, x):\n",
+    "        return self.projection_layer(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building and Initilization the Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_transformer(src_vocab_size: int,\n",
+    "                      tgt_vocab_size: int,\n",
+    "                      src_seq_len: int,\n",
+    "                      tgt_seq_len: int,\n",
+    "                      d_model: int=512,\n",
+    "                      N: int=6,\n",
+    "                      h: int=8,\n",
+    "                      dropout: float=0.1,\n",
+    "                      d_ff: int=2048) -> Transformer:\n",
+    "    src_embed = InputEmbeddings(d_model, src_vocab_size)\n",
+    "    tgt_embed = InputEmbeddings(d_model, tgt_vocab_size)\n",
+    "\n",
+    "    src_pos = PositionalEncoding(d_model, src_seq_len, dropout)\n",
+    "    tgt_pos = PositionalEncoding(d_model, tgt_seq_len, dropout)\n",
+    "\n",
+    "    encoder_blocks = []\n",
+    "    for _ in range(N):\n",
+    "        encoder_self_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+    "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+    "\n",
+    "        encoder_block = EncoderBlock(encoder_self_attention_block, feed_forward_block, dropout)\n",
+    "        encoder_blocks.append(encoder_block)\n",
+    "\n",
+    "    decoder_blocks = []\n",
+    "    for _ in range(N):\n",
+    "        decoder_self_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+    "        decoder_cross_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+    "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+    "\n",
+    "        decoder_block = DecoderBlock(decoder_self_attention_block, decoder_cross_attention_block, feed_forward_block, dropout)\n",
+    "        decoder_blocks.append(decoder_block)\n",
+    "\n",
+    "    encoder = Encoder(nn.ModuleList(encoder_block))\n",
+    "    decoder = Decoder(nn.ModuleList(decoder_block))\n",
+    "\n",
+    "    projection_layer = ProjectionLayer(d_model, tgt_vocab_size)\n",
+    "    transformer = Transformer(encoder, decoder, src_embed, tgt_embed, src_pos, tgt_pos, projection_layer)\n",
+    "\n",
+    "    for p in transformer.parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform_(p)\n",
+    "\n",
+    "    return transformer\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
